Add dashboard, settings modal, and PWA support
Introduces DashboardHome component for business overview, SettingsModal for bank transfer configuration, and service worker for PWA installability. Enhances Navbar with install and settings options, improves OrderCard with image compression, SMS, Zalo, Maps, and VietQR QR code features. Adds quick note tags in OrderForm, user filter in TrackingDashboard, and updates manifest and index.html for PWA/iOS support. Updates storageService for bank config and delivery proof deletion. Minor UI/UX improvements and bug fixes throughout.

--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,19 @@
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2769/2769104.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2769/2769104.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#15803d",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "orientation": "portrait"
 }
