--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "short_name": "EcoGo",
   "name": "EcoGo Logistics Manager",
@@ -18,6 +19,6 @@
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#15803d",
-  "background_color": "#ffffff",
+  "background_color": "#15803d",
   "orientation": "portrait"
 }
