Add notification system and UI integration
Introduces a notification system with local and Firestore support, including notification types and unread tracking. Adds NotificationMenu component and integrates notification bell with badge in Navbar. Notifications are triggered for key order actions (create, update, status change, payment verification, deletion). Updates dependencies for date-fns, bumps app version, and improves service worker activation logic.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecogo-logistics",
   "private": true,
-  "version": "1.1.9",
+  "version": "1.1.11",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "date-fns": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
