--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecogo-logistics",
   "private": true,
-  "version": "1.1.26",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,12 +16,16 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
     "uuid": "^9.0.1",
-    "date-fns": "^3.3.1"
+    "date-fns": "^3.3.1",
+    "jspdf": "^2.5.1",
+    "qrcode": "^1.5.3",
+    "pdfjs-dist": "^3.11.174"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
+    "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-react": "^4.2.1",
     "firebase-tools": "^13.0.0",
     "typescript": "^5.2.2",
