Update icons, cache version, and improve error logging
Changed manifest icons to new URLs, updated service worker cache name to v51, and improved voice search error logging in TrackingDashboard by converting error to string. Also removed unused zip file.

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
   "name": "EcoGo Logistics Manager",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2769/2769104.png",
+      "src": "https://i.postimg.cc/g0fwknrF/iconsshop.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2769/2769104.png",
+      "src": "https://i.postimg.cc/g0fwknrF/iconsshop.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
