Update app icons and improve voice search handling
Changed app icon URLs in index.html and manifest.json to new image source. Improved error handling and result parsing for voice search in TrackingDashboard. Updated service worker cache version to v52.

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
   "name": "EcoGo Logistics Manager",
   "icons": [
     {
-      "src": "https://i.postimg.cc/g0fwknrF/iconsshop.png",
+      "src": "https://i.postimg.cc/KjRNTKF7/shop.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.postimg.cc/g0fwknrF/iconsshop.png",
+      "src": "https://i.postimg.cc/KjRNTKF7/shop.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
