Add social link support and improve payment audit
Introduces socialLink field for customers, enabling Messenger/Zalo link input and inline editing in CustomerManager. OrderCard now includes a Messenger button to open saved social links or search by phone. OrderForm adds a 'Paste from Messenger' button and deducts product stock on order creation. PaymentAudit is refactored to support grouping orders by customer, batch filtering, and bulk confirmation/QR sharing for customer debts. Various UI and logic improvements across components for better workflow and clarity.

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,15 @@
-
 {
   "short_name": "EcoGo",
   "name": "EcoGo Logistics Manager",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2769/2769104.png",
+      "src": "https://i.postimg.cc/KjRNTKF7/shop.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2769/2769104.png",
+      "src": "https://i.postimg.cc/KjRNTKF7/shop.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
